# FukMSTR

./: .gitignore  AGENTS.md  Dockerfile  HANDOFF_FOR_CODEX.md  Makefile  README.md  pyproject.toml  requirements.txt
configs/: btcusdc_v223_promoted_strategy_manifest.json  btcusdc_v224_forward_freeze_manifest.json  example.yaml  real_h10_advanced.yaml  real_h10_base.yaml  real_h30_v05.yaml  real_h30_v06_long.yaml  real_h45_v06_long.yaml  research_fast.yaml  research_fast_extra_trees.yaml  research_logistic_10s.yaml
docs/: DATA_SCHEMA.md  KLINE_DATA_SCHEMA.md  LOCAL_VERIFICATION.md  MODELING_NOTES.md  RESEARCH_V100_COMMANDS.md  RESEARCH_V101_COMMANDS.md  RESEARCH_V102_COMMANDS.md  RESEARCH_V103_COMMANDS.md  RESEARCH_V104_COMMANDS.md  RESEARCH_V105_COMMANDS.md  RESEARCH_V106_COMMANDS.md  RESEARCH_V107_COMMANDS.md  RESEARCH_V108_COMMANDS.md  RESEARCH_V109_COMMANDS.md  RESEARCH_V10_COMMANDS.md  RESEARCH_V110_COMMANDS.md  RESEARCH_V111_COMMANDS.md  RESEARCH_V112_COMMANDS.md  RESEARCH_V115_COMMANDS.md  RESEARCH_V11_COMMANDS.md  RESEARCH_V12_COMMANDS.md  RESEARCH_V13_COMMANDS.md  RESEARCH_V143_COMMANDS.md  RESEARCH_V144_COMMANDS.md  RESEARCH_V145_COMMANDS.md  RESEARCH_V146_COMMANDS.md  RESEARCH_V147_COMMANDS.md  RESEARCH_V148_COMMANDS.md  RESEARCH_V149_COMMANDS.md  RESEARCH_V14_COMMANDS.md  RESEARCH_V150_COMMANDS.md  RESEARCH_V151_COMMANDS.md  RESEARCH_V152_COMMANDS.md  RESEARCH_V153_COMMANDS.md  RESEARCH_V154_COMMANDS.md  RESEARCH_V155_COMMANDS.md  RESEARCH_V156_COMMANDS.md  RESEARCH_V157_COMMANDS.md  RESEARCH_V158_COMMANDS.md  RESEARCH_V159_COMMANDS.md  (+148 more)
(+603 files in other folders)
