[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "lob-microprice-lab"
version = "0.8.0"
description = "Short-horizon limit order book prediction baseline."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Local research handoff"}]
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "scikit-learn>=1.3",
  "PyYAML>=6.0",
  "joblib>=1.3",
  "tabulate>=0.9",
  "websockets>=12.0"
]

[project.optional-dependencies]
dev = ["pytest>=8.0"]

[project.scripts]
lob-microprice-lab = "lob_microprice_lab.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-q"
filterwarnings = ["ignore::pandas.errors.PerformanceWarning"]
